--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import '~antd/dist/antd.css';
+
+.fareye-api{
+  background-color:#DFDFDF;
+  overflow-x: hidden;
+}
 .App {
   text-align: center;
 }
